<resources>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_browse">Browse</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="navigation_create_project">Create Project</string>
    <string name="navigation_my_projects">My Projects</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_notification">Notification</string>
    <string name="str_ok">Ok</string>
    <string name="str_name">Name</string>
    <string name="str_abilities">Abilities</string>
    <string name="str_employer">Employer</string>
    <string name="str_curriculum">Curriculum</string>
    <string name="str_company">Company</string>

    <string name="app_name">Perfect Project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login_screen">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password_str">Forgot password</string>
    <string name="action_not_registered">Not a member?</string>
    <string name="title_activity_signup_screen">Sign in</string>
    <string name="propmt_email_confirm">Email (confirm)</string>
    <string name="prompt_password_hint">Password</string>
    <string name="prompt_password_confirm_hint">Password (Confirm)</string>
    <string name="str_title">Title</string>
    <string name="str_startDate">Start Date</string>
    <string name="str_endDate">End Date</string>
    <string name="str_positions">Positions</string>
    <string name="str_location">Location</string>
    <string name="str_description">Description</string>
    <string name="prompt_name">Complete name</string>
    <string name="str_team_members">Team members</string>
    <string name="str_Skills">Skills</string>
    <string name="str_email">Email</string>
    <string name="email_not_available">Email not available</string>
    <string name="str_matricula">Contact</string>
    <string name="Missing_fields">Missing field(s)</string>
    <string name="Generic_Auth_error">Given credentials failed to authenticate.</string>
</resources>
